# todo-api-rust

./: .env  Cargo.toml  README.md  db.sqlite
backend/: .env  .env.example  .gitignore  Cargo.toml  db.sqlite
backend/src/: handlers.rs  main.rs  models.rs  openapi.rs
backend/static/: index.html
backend/static/assets/: ErrorNotFound-DO9myHRe.js  IndexPage-Cpw_iQj7.css  IndexPage-IFgzJgtP.js  MainLayout-DXSREAjC.js  i18n-CWDOgZiV.js  index-CPJKmwvn.js  index-Cj4W8VlD.css  vue.runtime.esm-bundler-6q6o4qD5.js
frontend/: package-lock.json  package.json  quasar.config.js
frontend/src-capacitor/: capacitor.config.json  package-lock.json  package.json
frontend/src/css/: quasar.variables.scss
frontend/src/pages/: IndexPage.vue
src/: handlers.rs  main.rs  openapi.rs
static/: index.html
