[package]
name = "tasks"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["multipart"] }
tokio = { version = "1.52.1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
dotenvy = "0.15.7"
csv = "1.4.0"

# to generate an OpenAPI 3.x spec from our axum code
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
tower-http = { version = "0.6.8", features = ["fs", "cors"] }
chrono = { version = "0.4", features = ["serde"] }
